# trabalho-3-1-autocomplete-Gabrienzo

./: CMakeLists.txt  README.md
data/: cities.txt  script_de_teste.txt  teste.txt  wiktionary.txt
include/: bancodd.h  interface.h  processador.h
src/: bancodd.cpp  completer.cpp  interface.cpp  processador.cpp
